@@ -1,3 +1,8 @@
+2012-01-02  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-loader.lisp (lisp-version-string): Append -no-threads to
+	SBCL without threads.
+
 2011-12-24  Stas Boukarev  <stassats@gmail.com>
 
 	* slime.el (slime-init-command): Don't call
